@@ -125,6 +125,11 @@ format_date(const char *format,const struct tm *tm,struct Hook * hook)
 		/* OK, what kind of format is expected? */
 		c = (*format++);
 
+		/* For C99, check if the 'E' or 'O' modifiers are present. If so,
+		   skip them for now. */
+		if(c == 'E' || c == 'O')
+			c = (*format++);
+
 		/* We stop if the string ends here. Hm... should this count as an error? */
 		if(c == '\0')
 			break;
